Fix: Align reset on dropdown

--- a/__core.scss
+++ b/__core.scss
@@ -146,6 +146,7 @@
 			display: none;
 			position: absolute;
 			left: 0;
+			text-align: left;
 
 			.menu--center & {
 				left: 50%;
